Fixed wrong float, should be ok on safari now

--- a/app/app/styles/_profileCommon.scss
+++ b/app/app/styles/_profileCommon.scss
@@ -640,7 +640,7 @@
 
 .ads-listing {
     .large-10 {
-        float: unset;
+        float: none;
         margin: 0px auto;
         .columns {
             padding-left:0;
